# OCR-Project

./: .gitignore  CONTRIBUTING.md  DATABASE_GUIDE.md  ML_INTEGRATION_GUIDE.md  OCR_Web_App_Postman_Collection.json  OPEN_BROWSER.bat  PDF_FIX_GUIDE.md  PDF_TROUBLESHOOTING.md  POPPLER_IMPLEMENTATION.md  QUICK_START.md  README.md  SETUP_GUIDE.md  START_APP.bat  START_APP.ps1  app.py  auto_setup_poppler.py  install_poppler.py  install_poppler_manual.py  main.py  ocr_results.db  pyproject.toml  requirements.txt  requirements_updated.txt  run.bat  run.ps1  setup.bat  setup_poppler.py  test_pdf_processing.py  test_pdf_setup.py
src/: database.py  ml_models.py  ocr_engine.py  pdf_to_image.py  preprocess.py
static/: script.js  style.css
templates/: index.html
