[project]
name = "ocr-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.0.3",
    "opencv-python==4.13.0.92",
    "pandas>=2.0",
    "pillow==11.1.0",
    "pymupdf==1.27.2.2",
    "pytesseract==0.3.13",
    "reportlab==4.0.9",
]
